--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/FeatureTestMap.FeatureTestMap
-EditorStartupMap=/Game/Maps/FeatureTestMap.FeatureTestMap
+GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
+EditorStartupMap=/Game/Maps/MainMenuMap.MainMenuMap
 GlobalDefaultGameMode=/Game/GameModes/BP_BaseGameMode.BP_BaseGameMode_C
 GameInstanceClass=/Game/Generic/BP_WarriorGameInstance.BP_WarriorGameInstance_C
 
